--- a/RxInAndroid/app/src/main/res/layout/activity_main.xml
+++ b/RxInAndroid/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
   >
 
   <TextView
+    android:id="@+id/tv_click"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Hello World!"
