--- a/AndroidDagger2/app/src/main/res/layout/activity_main.xml
+++ b/AndroidDagger2/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.onez.androiddagger2.MainActivity"
+    tools:context="me.onez.androiddagger2.DemoActivity"
     >
 
   <TextView
