--- a/AndroidDagger2/app/src/main/res/layout/activity_main.xml
+++ b/AndroidDagger2/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,13 @@
           android:textAllCaps="false"
           />
 
+      <Button
+          android:id="@+id/btn_test_dagger2"
+          android:layout_width="match_parent"
+          android:layout_height="44dp"
+          android:text="Test Dagger2"
+          android:textAllCaps="false"
+          />
 
     </LinearLayout>
   </ScrollView>
